# laptop-spec-rag

./: .gitignore  README.md  config.py  main.py  pyproject.toml  speed_run_experiment.py
data_processing/: build_kb.py  parse_html.py
data_processing/knowledge_base/: specs_integrated.json
data_processing/raw/: AORUS MASTER 16 AM6H.html  raw_specs.json
src/: __init__.py  data_loader.py  generator.py  models.py  prompts.py  query_analyzer.py  rag_engine.py  retriever.py
tests/: batch_test.py  speed_batch_test.py  test_questions.csv
